crates/wac-parser/tests/resolution/fail/spread-export-no-effect.wac
package test:comp;

import i: interface {};

export i...;
